# http-server

./: .env.example  .gitignore  pyproject.toml  ruff.toml
src/: config.py  main.py
src/application/transcription/: use_cases.py
src/domain/: ports.py
src/infrastructure/: containers.py
src/infrastructure/messages/rabbitmq/: adapters.py
src/infrastructure/storages/minio/: adapters.py
src/presentation/transcription/: route.py
