[project]
name = "audio-transcriber-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "boto3>=1.42.44",
    "dependency-injector>=4.48.3",
    "fastapi>=0.128.4",
    "gunicorn>=25.0.2",
    "openai-whisper>=20250625",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "ruff>=0.14.7",
    "uvicorn>=0.40.0",
]
